# LearningApp

backend/: .env  pyproject.toml
backend/backend/: app.py
frontend/: package.json
