[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["devin-ai-integration[bot] <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.114.2"}
psycopg = {extras = ["binary"], version = "^3.2.2"}
sqlalchemy = "^2.0.35"
passlib = "^1.7.4"
python-jose = "^3.3.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
